update manual install

--- a/wiki/安装重启前的工作.md
+++ b/wiki/安装重启前的工作.md
@@ -4,7 +4,9 @@
 
 ## 进入系统(chroot)
 
-进入刚刚安装的系统：
+请确保此时处于刚刚安装的系统中，注意此时的命令提示符是否不同于live环境。
+
+如果不是，用 `chroot` 进入刚刚安装的系统：
 ```sh
 chroot /mnt
 ```
@@ -20,7 +22,7 @@ chroot /mnt
 
     取消`en_US.UTF-8 UTF-8`和`zh_CN.UTF-8`的注释
 
-    > **vim操作要点**：`/`左斜杠键进行搜索；方向键移动光标；`i`键进入编辑模式；`esc`退出编辑模式；`:wq`保存并退出。
+    > **vim操作要点**：方向键移动光标；`i`键进入编辑模式；`esc`退出编辑模式；`/`左斜杠键进行搜索(`n`跳转下一个结果，`shift-n`跳转上一个结果)；`:wq`保存并退出。
 
 
 2. 生成本地化配置
