--- a/wiki/手动安装系统.md
+++ b/wiki/手动安装系统.md
@@ -248,10 +248,105 @@ genfstab -U /mnt > /mnt/etc/fstab
 
 
 
+## 系统初始配置
+
+### 进入系统(chroot)
+
+进入刚刚安装的系统
+```sh
+arch-chroot /mnt
+```
+
+此时根目录从live环境变成了`/mnt`，可以注意到提示符的变化。
+
+
+### 设置时间和时区
+
+- 设置时区为上海：
+
+    ```sh
+    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+    ```
+    或者：
+    ```sh
+    timedatectl set-timezone "Aisa/Shanghai"
+    ```
+
+- 生成调节时间误差的文件：
+    
+    ```sh
+    hwclock --systohc
+    ```
+
+
+### 设置主机名
+
+```sh
+vim /etc/hostname
+```
+取一个名字，例如 `archlinux`，保存退出。
+
+
+### 设置root密码
+
+```sh
+passwd 
+```
+
+输入过程不显示，直接输入回车即可。
+
+
+
+### 安装GRUB引导程序
+
+
+根据esp挂载点和个人需求的不同，bootloader的选择也会不同。这里安装最常用的`grub`，采用的是esp挂载点为`/efi`且grub装进esp的方案。
+
+本文提供 UEFI 引导的安装方式，如果是 bios 设备请看 [archwiki-GRUB](https://wiki.archlinux.org/title/GRUB)。
+
+1. 安装必要的软件包
+
+```sh
+pacman -S grub efibootmgr os-prober exfat-utils
+```
+
+`efibootmgr` 管理uefi启动项；
+
+`os-prober`和`exfat-utils` 用来搜索win11（不配置双系统的话可以不装）。
+
+
+2. 安装grub
+
+```sh
+grub-install --target=x86_64-efi --efi-directory=/efi --boot-directory=/efi --bootloader-id=ARCH 
+```
+
+- `grub-install`安装grub；
+ 
+- `--target` 指定架构；
+ 
+- `--efi-directory` 指定efi文件的目录（esp）；
+ 
+- `--boot-directory` 指定grub文件的目录；
+ 
+- `--bootloader-id` 任意取一个启动项名字；
+ 
+- PS：如果是移动设备或者主板只支持默认的efi路径要加上`--removable`选项。
+
+
+3. GRUB的后续配置请查看：[重启前的工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装后重启前的工作)
+
+
+
+### 退出chroot
+
+```sh
+exit
+```
+此时就回到了live环境，可以注意到提示符的变化。
 
 
 
 
-
-
+## 下一步：[重启前的工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装后重启前的工作)
 
