--- a/wiki/安装任意系统前的准备工作.md
+++ b/wiki/安装任意系统前的准备工作.md
@@ -84,4 +84,4 @@ ventoy制作的系统盘可以存放多个系统镜像，推荐。
 
 
 
-## 下一步：[安装 ArchLinux](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux)
+## 下一步：[安装 ArchLinux](./安装archlinux)
