--- a/wiki/安装后重启前的工作.md
+++ b/wiki/安装后重启前的工作.md
@@ -96,20 +96,23 @@ arch-chroot /mnt
         > watchdog的目的简单来说是在系统死机的时候自动重启系统。对个人用户来说没有意义，禁用以节省系统资源、提高开机和关机速度。
 
 
-2. 生成grub的配置文件
+2. 在grub的默认安装位置创建链接（如果没创建的话）
+
+    ```sh
+    ln -sf /efi/grub /boot/grub
+    ```
+
+    我们的grub在`/efi/grub`，大多数程序会默认检测`/boot/grub`作为grub的安装位置，所以创建一个链接方便使用。之后对 `/boot/grub` 的操作也能反映到 `/efi/grub` 中。
+
+
+
+3. 生成grub的配置文件
 
     ```sh
     grub-mkconfig -o /efi/grub/grub.cfg
     ```
 
 
-3. 在grub的默认安装位置创建链接
-
-    ```sh
-    ln -sf /efi/grub /boot/grub
-    ```
-
-    我们的grub在`/efi/grub`，大多数程序会默认检测`/boot/grub`作为grub的安装位置，所以创建一个链接方便使用。
 
 
 ## 配置zram
@@ -118,13 +121,13 @@ zram将内存的一部分空间用作交换空间，如果你没有配置swap，
 
 1. 安装`zram-generator`
     ```sh
-    sudo pacman -S zram-generator
+    pacman -S --needed zram-generator
     ```
 
 2. 编辑配置文件：
 
     ```sh
-    sudo vim  /etc/systemd/zram-generator.conf
+    vim /etc/systemd/zram-generator.conf
     ```
     ```
     [zram0]
@@ -142,7 +145,7 @@ zram将内存的一部分空间用作交换空间，如果你没有配置swap，
     zswap是swap的缓存。需要交换的数据在存入交换空间之前会先被zswap压缩后暂时放进内存里。和zram功能重复且引入了复杂性，故禁用。
 
     ```sh
-    sudo vim /etc/default/grub
+    vim /etc/default/grub
     ```
 
     在`GRUB_CMDLINE_LINUX_DEFAULT=""`里写入`zswap.enabled=0`
@@ -152,9 +155,9 @@ zram将内存的一部分空间用作交换空间，如果你没有配置swap，
     ```
 
 4. 重新生成grub的配置文件
-    
+
     ```sh
-    sudo grub-mkconfig -o /efi/grub/grub.cfg
+    grub-mkconfig -o /efi/grub/grub.cfg
     ```
 
 ## 退出chroot
@@ -186,7 +189,7 @@ reboot
 
 ## 登录账户
 
-进入系统后，输入账户密码。
+进入系统后，输入用户名和密码，以root用户登录。
 
 
 ## 连接网络
@@ -219,3 +222,35 @@ reboot
     ping -c 3 bilibili.com
     ```
 
+
+## 放松一下吧
+
+恭喜你成功手动安装了archlinux，现在小小地奖励一下自己吧。
+
+```sh
+pacman -S fastfetch lolcat cmatrix
+```
+
+自己运行命令试试吧。
+```sh
+fastfetch
+```
+```sh
+fastfetch | lolcat 
+```
+```sh
+cmatrix
+```
+```sh
+cmatrix | lolcat
+```
+
+`q`键或`ctrl+C`退出。
+
+
+`|`竖线叫作pipeline管道符，作用是把左边程序的输出结果输入到右边的程序里。
+
+
+
+
+## 下一步：[安装桌面环境前的基本配置](./安装桌面环境前的基本配置)
