--- a/wiki/手动安装系统.md
+++ b/wiki/手动安装系统.md
@@ -1,5 +1,5 @@
 
-上篇：安装archlinux的[准备工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux#准备工作)
+上篇：安装archlinux的[准备工作](./安装archlinux#准备工作)
 
 
 在必要的准备工作后，这部分将手动安装 archlinux 系统本体。
@@ -18,7 +18,7 @@
     fdisk -l /dev/想要查询详细情况的硬盘  #小写字母l，查看详细分区信息
     ```
     
-    确保硬盘的分区表类型是gpt：[检查方法](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux/检查分区表类型)
+    确保硬盘的分区表类型是gpt：[检查方法](./安装archlinux/检查分区表类型)
 
 
 2. 用`cfdisk`创建分区
@@ -33,7 +33,7 @@
 
         创建512MB的分区，类型（type）选择`efi system`。
 
-        如果类型里没有`efi system`的话，说明不是GPT分区表，请按照[这个教程](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux/检查分区表类型)修改。
+        如果类型里没有`efi system`的话，说明不是GPT分区表，请按照[这个教程](./安装archlinux/检查分区表类型)修改。
 
     - **创建根分区**：
 
@@ -180,22 +180,42 @@
 
 ### 安装系统本体
 
-```sh
-pacstrap -K /mnt base base-devel linux linux-firmware btrfs-progs
+`pacstrap`命令把软件安装到指定目录下；`-K`参数表示复制密钥。
 
--K 复制密钥
-base是基本包
-base-devel是编译其他软件的时候用的
-linux是主线内核，可以更换别的
-linux-firmware是基本固件
-btrfs-progs是btrfs文件系统的管理工具
-```
+- 安装基本包
+    ```sh
+    pacstrap -K /mnt base base-deve
+    ```
+    `base`是基本包；`base-devel`是编译其他软件的时候用的
 
-`pacstrap`命令是把软件安装到指定的根目录下。
+- 安装Linux内核
 
+    > **内核的选择**：要续航装`linux`，要性能装`linux-zen`。推荐多装一个 `linux-lts` 稳定版内核以备不时之需。
+    
+    除了内核还需要同时安装对应的内核头文件。
 
+    - `linux`主线内核
+        ```sh
+        pacstrap -K /mnt linux linux-headers
+        ```
+    - `linux-zen`性能特调内核
+        ```sh
+        pacstrap -K /mnt linux-zen linux-zen-headers
+        ```
+    - `linux-lts`长期稳定版内核
+        ```sh
+        pacstrap -K /mnt linux-lts linux-lts-headers
+        ```
 
-> **linux内核的选择**：要续航装`linux`，要性能装`linux-zen`。推荐多装一个 `linux-lts` 稳定版内核以备不时之需。
+- 其他必要的包
+
+    ```sh
+    pacstrap -K /mnt linux-firmware btrfs-progs
+    ```
+
+    `linux-firmware`是基本固件
+
+    `btrfs-progs`是btrfs文件系统的管理工具
 
 
 ### 安装必要的功能性软件
@@ -260,17 +280,22 @@ arch-chroot /mnt
 此时根目录从live环境变成了`/mnt`，可以注意到提示符的变化。
 
 
-### 设置时间和时区
+### 设置时区
 
 - 设置时区为上海：
 
-    ```sh
-    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-    ```
-    或者：
-    ```sh
-    timedatectl set-timezone "Aisa/Shanghai"
-    ```
+    - 方法一：用 `timedatectl` 命令指定
+        ```sh
+        timedatectl set-timezone "Aisa/Shanghai"
+        ```
+
+    - 方法二：创建软链接
+        ```sh
+        ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+        ```
+
+    此时再运行 `timedatectl` 可以看到时区已经变成 `Shanghai`。
+
 
 - 生成调节时间误差的文件：
     
@@ -334,19 +359,40 @@ grub-install --target=x86_64-efi --efi-directory=/efi --boot-directory=/efi --bo
 - PS：如果是移动设备或者主板只支持默认的efi路径要加上`--removable`选项。
 
 
-3. GRUB的后续配置请查看：[重启前的工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装后重启前的工作)
+3. 在grub的默认安装位置创建软链接
+
+    ```sh
+    ln -sf /efi/grub /boot/grub
+    ```
+
+    大多数程序会默认检测`/boot/grub`作为grub的安装位置，所以创建一个链接方便使用。之后对 `/boot/grub` 的操作也能反映到 `/efi/grub` 中。
+
+
+4. 生成启动项：
+
+    ```sh
+    grub-mkconfig -o /efi/grub/grub.cfg
+    ```
+
+
+4. GRUB的后续配置请查看：[重启前的工作](./安装后重启前的工作)
 
 
 
-### 退出chroot
+### 可选：退出chroot
+
+**先不退出**，后续还有需要在 chroot 里进行的操作。
+
+如果需要退出：
 
 ```sh
 exit
 ```
+
 此时就回到了live环境，可以注意到提示符的变化。
 
 
 
 
-## 下一步：[重启前的工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装后重启前的工作)
+## 下一步：[重启前的工作](./安装后重启前的工作)
 
