--- a/wiki/用脚本安装系统.md
+++ b/wiki/用脚本安装系统.md
@@ -1,5 +1,5 @@
 
-上篇：安装archlinux的[准备工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux#准备工作)
+上篇：安装archlinux的[准备工作](./安装archlinux#准备工作)
 
 这部分用 arch 自带的 `archinstall` 脚本安装系统。
 
@@ -42,7 +42,7 @@ archinstall
 - **创建EFI分区**：选中要使用的空闲空间 > `Size`（分区大小）512MB > `Filesystem`（文件系统）FAT32 > `Mountpoint`（挂载点）/efi
 - **指定为启动分区**：选中刚刚创建的分区，回车设置`bootable`和`esp`。
 
-如果这里没有看到 `esp` 的选项，退出archinstall脚本，检查硬盘分区表是否为GPT类型：[检查方法](https://github.com/jalaxy33/archlinux-tour/wiki/安装archlinux/检查分区表类型)。
+如果这里没有看到 `esp` 的选项，退出archinstall脚本，检查硬盘分区表是否为GPT类型：[检查方法](./安装archlinux/检查分区表类型)。
 
 #### 2. 可选：配置swap交换空间
 
@@ -169,6 +169,6 @@ tab键选择，回车确认。
 
 
 
-## 下一步：[重启前的工作](https://github.com/jalaxy33/archlinux-tour/wiki/安装后重启前的工作)
+## 下一步：[重启前的工作](./安装后重启前的工作)
 
 
