--- a/wiki/快照和系统维护.md
+++ b/wiki/快照和系统维护.md
@@ -338,13 +338,13 @@ sudo downgrade ghostty
 
     archlinux是滚动发行版。滚动是英文直译，原词是rolling，指一种推送更新的方式，只要有新版本就会推送，由用户管理更新。对应的另一种更新方式是定期更新一个大版本，例如fedora是六个月一更新，由发行方管理更新。 滚挂，指的是滚动更新的发行版因为更新导致系统异常。这通常是用户操作不当、忽略官方公告等原因导致的。只要学习一下正确的更新方式和快照的使用方法就不用担心滚挂问题。
 
-    通常软件更新不用担心。出现密钥（keyring）、内核、驱动、固件、引导程序之类的更新要留个心眼，先不第一时间更新，等一手社区消息。 另一个重点是滚动更新的发行版的软件通常会适配最新的依赖，如果部分更新可能会无法使用软件。
+    通常软件更新不用担心。**出现密钥（keyring）、内核、驱动、固件、引导程序之类的更新要留个心眼，先不第一时间更新，等一手社区消息**。 另一个重点是滚动更新的发行版的软件通常会适配最新的依赖，如果部分更新可能会无法使用软件。
 
 - 良好的使用习惯
 
     btrfs文件系统已经足够稳定，“不作死就不会死”。使用时遵循以下几点：
 
-    1. 别第一时间更新，别长时间不更新，别部分更新，密钥单独更新，重要程序更新前创建快照
+    1. **别第一时间更新，别长时间不更新，别部分更新，密钥单独更新，重要程序更新前创建快照**
     
-    2. 弄坏系统的通常是用户自己的不当操作，明白自己的行为会造成怎样的后果，做不了解的事情前创建快照
+    2. **弄坏系统的通常是用户自己的不当操作，明白自己的行为会造成怎样的后果，做不了解的事情前创建快照**
 
