update GPU driver

--- a/wiki/快照和系统维护.md
+++ b/wiki/快照和系统维护.md
@@ -348,3 +348,13 @@ sudo downgrade ghostty
     
     2. **弄坏系统的通常是用户自己的不当操作，明白自己的行为会造成怎样的后果，做不了解的事情前创建快照**
 
+
+## ⚠️现在你学会了快照的使用方法，接下来请自行判断要不要创建快照⚠️
+
+
+万事俱备，接下来可以尝试各种各样的事情。记住，你随时可以回档到这个时间点，所以不用犹豫，有问题回档即可。
+
+
+
+## 下一节：[显卡驱动和硬件编解码](./显卡驱动和硬件编解码)
+
