--- a/wiki/安装后重启前的工作.md
+++ b/wiki/安装后重启前的工作.md
@@ -6,7 +6,7 @@
 
 请确保此时处于刚刚安装的系统中，注意此时的命令提示符是否不同于live环境。
 
-如果不是，用 `chroot` 进入刚刚安装的系统：
+如果不是，用 `arch-chroot` 进入刚刚安装的系统：
 ```sh
 arch-chroot /mnt
 ```
@@ -40,7 +40,7 @@ arch-chroot /mnt
     vim /etc/locale.conf
     ```
 
-    设置为英文（一般默认就是）：
+    设置为英文：
     ```
     LANG=en_US.UTF-8
     ```
@@ -121,7 +121,7 @@ zram将内存的一部分空间用作交换空间，如果你没有配置swap，
 
 1. 安装`zram-generator`
     ```sh
-    pacman -S --needed zram-generator
+    pacman -S zram-generator
     ```
 
 2. 编辑配置文件：
