--- a/wiki/安装桌面环境前的基本配置.md
+++ b/wiki/安装桌面环境前的基本配置.md
@@ -158,7 +158,7 @@ EDITOR=vim
 
 
 ```sh
-pacman -S --needed yay paru
+pacman -S yay paru
 ```
 
 `yay`和`paru`都常用，任选其一即可，也可以两个都装。
@@ -170,7 +170,7 @@ pacman -S --needed yay paru
 
 - 谷歌开源字体
     ```sh
-    pacman -S --needed noto-fonts noto-fonts-emoji
+    pacman -S noto-fonts noto-fonts-emoji
     ```
 
     - `noto-fonts`是谷歌字体，包含多个国家的语言
@@ -183,11 +183,11 @@ pacman -S --needed yay paru
 
     文泉驿正黑
     ```sh
-    pacman -S --needed wqy-zenhei
+    pacman -S wqy-zenhei
     ```
     思源黑体
     ```sh
-    pacman -S --needed adobe-source-han-sans-cn-fonts
+    pacman -S adobe-source-han-sans-cn-fonts
     ```
 
 
@@ -198,7 +198,7 @@ pacman -S --needed yay paru
 1. 可选：安装音视频固件
 
     ```sh
-    pacman -S --needed sof-firmware alsa-ucm-conf alsa-firmware 
+    pacman -S sof-firmware alsa-ucm-conf alsa-firmware 
     ```
 
     - `sof-firmware`为现代音视频设备提供固件，通常装这个就可以了
