--- a/wiki/手动安装系统.md
+++ b/wiki/手动安装系统.md
@@ -184,7 +184,7 @@
 
 - 安装基本包
     ```sh
-    pacstrap -K /mnt base base-deve
+    pacstrap -K /mnt base base-devel
     ```
     `base`是基本包；`base-devel`是编译其他软件的时候用的
 
@@ -222,23 +222,23 @@
 
 - 联网工具，`networkmanager`与kde和gnome深度集成，有需求可以换成别的
     ```sh
-    pacstrap /mnt networkmanager
+    pacstrap -K /mnt networkmanager
     ```
 
 - 任意文本编辑器，如 `vim` 或 `gvim`
     ```sh
-    pacstrap /mnt vim 
+    pacstrap -K /mnt vim 
     ```
 
 - sudo权限开关
     ```sh
-    pacstrap /mnt sudo 
+    pacstrap -K /mnt sudo 
     ```
 
 - 内核微码，用于修复和优化cpu，根据自己的cpu安装
     ```sh
-    pacstrap /mnt intel-ucode  #intel用户装这个
-    pacstrap /mnt amd-ucode  #amd用户装这个
+    pacstrap -K /mnt intel-ucode  #intel用户装这个
+    pacstrap -K /mnt amd-ucode  #amd用户装这个
     ```
 
 - **注意**：如果你使用的是marvell的无线网卡，这里要额外安装`linux-firmware-marvell`，否则进系统找不到网卡。
