update cli tool

--- a/wiki/安装桌面环境前的基本配置.md
+++ b/wiki/安装桌面环境前的基本配置.md
@@ -1,7 +1,6 @@
 
 本文将安装所有桌面环境通用的基础配置。建议在完成配置后创建一个快照作为存档点（我的习惯是叫 `before desktop`），方便更换或者尝试不同的桌面环境。
 
-
 本文预设以 root 用户登录。
 
 ## 确认系统状态
@@ -195,10 +194,17 @@ pacman -S yay paru
 
 让音频设备和屏幕分享正常工作。
 
+0. 切换为普通用户
+    ```sh
+    su 用户名
+    ```
+    输入之前设置的密码
+
+
 1. 可选：安装音视频固件
 
     ```sh
-    pacman -S sof-firmware alsa-ucm-conf alsa-firmware 
+    sudo pacman -S --needed sof-firmware alsa-ucm-conf alsa-firmware 
     ```
 
     - `sof-firmware`为现代音视频设备提供固件，通常装这个就可以了
@@ -211,7 +217,7 @@ pacman -S yay paru
 2. 安装音视频服务
 
     ```sh
-    pacman -S --needed pipewire wireplumber pipewire-pulse pipewire-alsa pipewire-jack 
+    sudo pacman -S --needed pipewire wireplumber pipewire-pulse pipewire-alsa pipewire-jack 
     ```
 
     - `pipewire`是由redhat主导开发的现代音视频服务
@@ -226,6 +232,7 @@ pacman -S yay paru
     ```sh
     systemctl --user enable --now pipewire pipewire-pulse wireplumber
     ```
+    这里需要普通用户
 
 
 ## 蓝牙
@@ -233,13 +240,13 @@ pacman -S yay paru
 1. 安装
 
     ```sh
-    pacman -S --needed bluez
+    sudo pacman -S --needed bluez
     ```
 
 2. 启动服务
 
     ```sh
-    systemctl enable --now bluetooth
+    sudo systemctl enable --now bluetooth
     ```
 
 
@@ -251,13 +258,13 @@ pacman -S yay paru
 1. 安装
 
     ```sh
-    pacman -S power-profiles-daemon
+    sudo pacman -S --needed power-profiles-daemon
     ```
 
 2. 启动服务
 
     ```sh
-    systemctl enable --now power-profiles-daemon 
+    sudo systemctl enable --now power-profiles-daemon 
     ```
 
 这个易用而且足够，不建议使用tlp或者auto-cpufreq，功耗上不会有明显区别。
@@ -283,7 +290,7 @@ flatpak是全发行版通用的打包方式，依赖和插件比较多的软件f
     flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
     ```
 
-3. 可选：更换国内源
+3. 更换国内源
 
     在已有 flathub 远程源的基础上：
 
@@ -342,12 +349,6 @@ flatpak是全发行版通用的打包方式，依赖和插件比较多的软件f
         systemctl hibernate
         ```
 
-
-## 重启电脑生效
-
-```sh
-reboot
-```
 
 
 ## 下一节：[快照和系统维护](./快照和系统维护)
