--- a/wiki/安装桌面环境前的基本配置.md
+++ b/wiki/安装桌面环境前的基本配置.md
@@ -329,13 +329,13 @@ flatpak是全发行版通用的打包方式，依赖和插件比较多的软件f
 2. 如果是 `HOOKS(base udev ...)`
     1. 添加 hook：
         ```sh
-        vim /etc/mkinitcpio.conf
+        sudo vim /etc/mkinitcpio.conf
         ```
         在`HOOKS()`内添加`resume`,注意需要添加在`udev`的后面
         
     2. 重新生成initramfs
         ```sh
-        mkinitcpio -P
+        sudo mkinitcpio -P
         ```
 
     3. 重启电脑
