[update] manual install

--- a/wiki/安装桌面环境前的基本配置.md
+++ b/wiki/安装桌面环境前的基本配置.md
@@ -186,7 +186,7 @@ pacman -S yay paru
     ```
     思源黑体
     ```sh
-    pacman -S adobe-source-han-sans-cn-fonts
+    pacman -S adobe-source-han-sans-cn-fonts adobe-source-han-serif-cn-fonts 
     ```
 
 
