--- a/wiki/快照和系统维护.md
+++ b/wiki/快照和系统维护.md
@@ -63,6 +63,20 @@ opensuse开发的快照软件，超级好用。
         snapper -c home create-config /home
         ```
 
+6. 可选：修改快照配置的设置
+
+    - 查看快照配置的设置：
+        ```sh
+        snapper -c root get-config  
+        snapper -c home get-config  
+        ```
+    
+    - 我一般会禁止按时间线创建
+        ```sh
+        snapper -c root set-config TIMELINE_CREATE="no"
+        snapper -c home set-config TIMELINE_CREATE="no"
+        ```
+
 6. 创建快照
 
     分别创建home和root的快照：
