--- a/wiki/手动安装系统.md
+++ b/wiki/手动安装系统.md
@@ -286,7 +286,7 @@ arch-chroot /mnt
 
     - 方法一：用 `timedatectl` 命令指定
         ```sh
-        timedatectl set-timezone "Aisa/Shanghai"
+        timedatectl set-timezone "Asia/Shanghai"
         ```
 
     - 方法二：创建软链接
